envoy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
        - name: envoy
          image: envoyproxy/envoy:v1.30.4
          volumeMounts:
            - name: config
              mountPath: /etc/envoy
              readOnly: true
          command: ["/usr/local/bin/envoy"]
          args: ["-c", "/etc/envoy/envoy.yaml", "--service-cluster", "envoy", "--log-level", "debug"]
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 256Mi
      volumes:
        - name: config
          configMap:
            name: envoy
