envoy/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: envoy
spec:
  podSelector:
    matchLabels:
      app: envoy
  policyTypes:
    - Egress
    - Ingress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: server
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: server
      ports:
        - port: 80
    - to:
        - podSelector:
            matchLabels:
              app: otel-collector
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: otel-collector
      ports:
        - port: 4317
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: client
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: client
      ports:
        - port: 80
